# es-de-gamelist-generator

./: .gitignore  README.md  gamelist-gen.sh  pyproject.toml
gamelist_generator/: main.py
tests/: test_gamelist_gen.sh  test_main.py
