[project]
name = "es-de-gamelist-generator"
version = "0.1.0"
description = "Generate ES-DE gamelist.xml files from ROM directories"
authors = [
    {name = "Caleb Mabry",email = "caleb.mabry.dev@gmail.com"}
]
requires-python = "^3.10"
dependencies = []

[tool.poetry]
packages = [{include = "gamelist_generator"}]

[project.scripts]
gamelist-gen = "gamelist_generator.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
